--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,10 @@ body{
     margin: auto;
     max-width: 1200px;
 }
+.container :hover{
+    margin: auto;
+    max-width: 12000px;
+}
 
 /* header */
 .header{
